--- a/Exercicios/ex022/fundo06.html
+++ b/Exercicios/ex022/fundo06.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            background-attachment: fixed;
             height: 100vh;
             background-color: black;
             background-image: url(images/wallpaper002.jpg);
@@ -23,13 +24,67 @@
             margin: auto;
             border-radius: 15px;
         }
-        
+
+        main>h1 {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-align: center;
+        }
+
+        main>p {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-weight: 500;
+            font-size: .7em;
+        }
+
+        header {
+            display: flexbox;
+            background-color: white;
+            border-radius: 10px;
+            margin-left: 25%;
+            margin-right: 25%;
+        }
+
+        header>h1 {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
+    <header>
+        <h1>TESTE</h1>
+    </header>
     <main>
         <h1>TESTE</h1>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, corporis velit voluptates non ducimus
+            veniam nobis nisi distinctio quae ipsa totam corrupti sunt sapiente blanditiis obcaecati temporibus
+            doloremque, odit ab. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ut nemo totam
+            assumenda praesentium? Cupiditate quos error qui distinctio iste dicta accusamus sequi deserunt, dolores
+            soluta voluptate totam animi atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            repudiandae veniam assumenda quasi placeat nam suscipit sed consequuntur libero, iusto recusandae vitae,
+            quas quod quia labore aperiam dolor? Blanditiis, consectetur.</P>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, corporis velit voluptates non ducimus
+            veniam nobis nisi distinctio quae ipsa totam corrupti sunt sapiente blanditiis obcaecati temporibus
+            doloremque, odit ab. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ut nemo totam
+            assumenda praesentium? Cupiditate quos error qui distinctio iste dicta accusamus sequi deserunt, dolores
+            soluta voluptate totam animi atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            repudiandae veniam assumenda quasi placeat nam suscipit sed consequuntur libero, iusto recusandae vitae,
+            quas quod quia labore aperiam dolor? Blanditiis, consectetur.</P>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, corporis velit voluptates non ducimus
+            veniam nobis nisi distinctio quae ipsa totam corrupti sunt sapiente blanditiis obcaecati temporibus
+            doloremque, odit ab. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ut nemo totam
+            assumenda praesentium? Cupiditate quos error qui distinctio iste dicta accusamus sequi deserunt, dolores
+            soluta voluptate totam animi atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            repudiandae veniam assumenda quasi placeat nam suscipit sed consequuntur libero, iusto recusandae vitae,
+            quas quod quia labore aperiam dolor? Blanditiis, consectetur.</P>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, corporis velit voluptates non ducimus
+            veniam nobis nisi distinctio quae ipsa totam corrupti sunt sapiente blanditiis obcaecati temporibus
+            doloremque, odit ab. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ut nemo totam
+            assumenda praesentium? Cupiditate quos error qui distinctio iste dicta accusamus sequi deserunt, dolores
+            soluta voluptate totam animi atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            repudiandae veniam assumenda quasi placeat nam suscipit sed consequuntur libero, iusto recusandae vitae,
+            quas quod quia labore aperiam dolor? Blanditiis, consectetur.</P>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, corporis velit voluptates non ducimus
             veniam nobis nisi distinctio quae ipsa totam corrupti sunt sapiente blanditiis obcaecati temporibus
             doloremque, odit ab. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ut nemo totam
