--- a/Exercicios/ex022/fundo06.html
+++ b/Exercicios/ex022/fundo06.html
@@ -8,14 +8,22 @@
     <title>Fundo fixo de tela</title>
     <style>
         body {
-            background-attachment: fixed;
             height: 100vh;
+            background: black url(images/wallpaper002.jpg) center center no-repeat fixed;
+
+        }
+
+        /*SHORTHAND BACKGROUND 
+                Color > Image > Position > Repeat > Size > Attachment
             background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-position: center center;
+            background-repeat: no-repeat;
             background-size: cover;
-        }
+            background-attachment: fixed;
+
+                */
 
         main {
             background-color: white;
