--- a/Exercicios/ex022/fundo06.html
+++ b/Exercicios/ex022/fundo06.html
@@ -9,19 +9,22 @@
     <style>
         body {
             height: 100vh;
+
             background: black url(images/wallpaper002.jpg) center center no-repeat fixed;
+
 
         }
 
         /*SHORTHAND BACKGROUND 
+        
                 Color > Image > Position > Repeat > Size > Attachment
-            background-color: black;
+          background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-position: center center;
-            background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
+             
 
                 */
 
@@ -42,6 +45,7 @@
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-weight: 500;
             font-size: .7em;
+            padding: 5px;
         }
 
         header {
@@ -56,11 +60,51 @@
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             text-align: center;
         }
+
+        .blob {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: black;
+            border-radius: 20px;
+            margin: 10px;
+            height: 20px;
+            width: 80px;
+
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+            transform: scale(1);
+            animation: pulse 2s infinite;
+        }
+
+        .blob:hover {
+            background: red;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(0.95);
+                box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.7);
+            }
+
+            70% {
+                transform: scale(1);
+                box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
+            }
+
+            100% {
+                transform: scale(0.95);
+                box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+            }
+
+
+
+        }
     </style>
 </head>
 
 <body>
     <header>
+        <button class="blob"></button>
         <h1>TESTE</h1>
     </header>
     <main>
